Added info to navbar, and made some changes on info page

--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -1,3 +1,12 @@
-<h5> HELLO </h5>
-<p> this is the information page for our app, DREXEL PROMOS. Here you will find information on how to use the web
-    application and information about, the creators.</p>
+<h5> Developers </h5>
+<ul>
+    <li>Gulam Contractor</li>
+    <li>Dennis George</li>
+    <li>Shivanshi</li>
+    <li>Yusuf Kerem Ozaydin</li>
+</ul>
+<h5>How to use this website?</h5>
+<ol>
+    <li>Create an account</li>
+    <li>Start using!</li>
+</ol>
