--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,8 +23,29 @@
       integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js" ></script>
   <link rel="stylesheet" href="/css/style.css">
   <title>Drexel Promos</title>
+
+
+  <script>
+    function addLike(postId){
+      $.ajax({
+        type: "PUT",
+        data: { postId },
+        url: "posts/addLike",
+        success: function(e){
+          console.log('success adding a like')
+          location.reload();
+        },
+        error: function(e){
+          console.log('error adding a like')
+        } 
+      })
+      
+    }
+    
+  </script>
 </head>
 
 <body>
