--- a/views/layouts/landing.handlebars
+++ b/views/layouts/landing.handlebars
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
   <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"></script>
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
   <link rel="stylesheet" href="/css/style.css">
   <title>Drexel Promos</title>
@@ -43,7 +43,7 @@
   <script>
     $(function(){
       var typed = new Typed("#typed" , {
-        strings: ["Search for: projects.", "Search for: events.", "Search for: new music."],
+        strings: ["Search for: projects.", "Search for: events.", "Search for: new music.", "Search for: posters.", "Search for: Youtube Videos."],
         typeSpeed: 50,
         // time before typing starts
         //startDelay: 1200,
