checking in shiv branch

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Lato');
+/* @import url('https://fonts.googleapis.com/css?family=Lato'); */
+@import url('https://fonts.googleapis.com/css?family=Poppins');
 
 :root {
-  --primary-color: #568c9b;
-  --primary-hover-color: #64a5b7;
+  /* --primary-color: #568c9b;
+  --primary-hover-color: #64a5b7; */
+  --primary-color: #c26209;
+  --primary-hover-color: #ddbd06;
   --bg-color: #333;
   --box-shadow: 3px 4px 12px rgba(0, 0, 0, 0.7);
 }
@@ -12,7 +15,8 @@
 }
 
 body {
-  font-family: 'Lato', sans-serif;
+  /* font-family: 'Lato', sans-serif; */
+  font-family: 'Poppins', sans-serif;
   margin: 0;
   color: #333;
   background: #f4f4f4;
@@ -103,7 +107,8 @@ header.inner {
 
 /* Home Search */
 .search-wrap {
-  background: url('../img/bg.jpg') no-repeat center center fixed / cover;
+  background: url('../img/bg.gif') no-repeat center center fixed / cover;
+  /* background: url('../img/bg.jpg') no-repeat center center fixed / cover; */
   height: 100vh;
   width: 100%;
   padding: 1.3rem 3rem;
