--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,6 +3,7 @@
     <form action="/posts/search" class="search-form" id="search">
         <i class="fas fa-search"></i>
         <input type="search" name="term" id="typed" placeholder="">
-        <input type="submit" value="Search">
+        <input type="submit" value="GO!">
     </form>
 </section>
+{{!-- style=background-color:#c26209 --}}
