--- a/views/layouts/landing.handlebars
+++ b/views/layouts/landing.handlebars
@@ -18,7 +18,7 @@
 
 <body>
   <header>
-    <h2><a href="/"><i class="fas fa-comments"></i>
+    <h2><a href="/"><i class="fas fa-bullhorn"></i>
         Drexel Promos</a></h2>
     <nav>
       <ul>
