--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
+  {{!-- <link rel="stylesheet" href="https://bootswatch.com/4/superhero/bootstrap.min.css"/> --}}
   <link rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css"/>
   <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -29,7 +30,7 @@
 
 <body>
   <header class="inner">
-    <h2><a href="/"><i class="fas fa-comments"></i>
+    <h2><a href="/"><i class="fas fa-bullhorn"></i>
         Drexel Promos</a></h2>
     <nav>
       <ul>
